# dragonruby-steam-stats

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  copy-dragonruby
.cache/clangd/index/: array.h.31430BE282EF6B2F.idx  boxing_word.h.9DF009E1BAB164FD.idx  class.h.0BE65B3F898357EE.idx  common.h.87B6C4F5CF704C21.idx  compile.h.F8F4FC6C752BE7CE.idx  data.h.1E5E88F901082912.idx  debug.h.CBD03CB274FD7F1A.idx  dragonruby.h.407CBF88C79E2D36.idx  dragonruby.h.inc.8A91C6B771708CD7.idx  dump.h.EA56B66CCF972EB8.idx  error.h.C074965A3998C829.idx  extension.cpp.2F83FE0343C993B0.idx  extension.h.B8197ADC25553B6C.idx  gc.h.3DD4E4B7C4EA7524.idx  hash.h.2BEA76FB08C4F713.idx  irep.h.33FBF5650302F586.idx  isteamapps.h.70CD3E0F18118231.idx  isteamclient.h.AD1EA33ED55CB742.idx  isteamcontroller.h.B04A6137E2F88A72.idx  isteamfriends.h.07A1B71636E214A1.idx  isteamgameserver.h.FBC1A76CECD9DEDA.idx  isteamgameserverstats.h.8AF94863395CBAD5.idx  isteamhtmlsurface.h.55D9081225B8E1DE.idx  isteamhttp.h.7A216A6498BCA0E5.idx  isteaminput.h.8D888B5A0C675660.idx  isteaminventory.h.27D4F7407DBE2DE9.idx  isteammatchmaking.h.F9EBB7E86E4558D6.idx  isteammusic.h.F9D119DF8FFDC6D7.idx  isteamnetworking.h.EFEC42D452466C7D.idx  isteamnetworkingmessages.h.50904DAFE4D1EBA4.idx  isteamnetworkingsockets.h.B23A441D8271A703.idx  isteamnetworkingutils.h.BA04C23DA84FC35A.idx  isteamparentalsettings.h.A1D48C8861B125FB.idx  isteamremoteplay.h.2B6A351F70EA6F72.idx  isteamremotestorage.h.2ADB76DBA81E4D08.idx  isteamscreenshots.h.95D99F1F681435DA.idx  isteamtimeline.h.9D64591666A5A08B.idx  isteamugc.h.CF4D92419E984819.idx  isteamuser.h.0D7C393C793B0EC9.idx  isteamuserstats.h.9B3D014D90E97619.idx  (+23 more)
.github/workflows/: release.yml
lib/: extension.c  extension.cpp  extension.h
mygame/: CHANGELOG.txt  steam_stats.rb
mygame/app/: main.rb  shared_tests.rb
native/macos/: extension.dylib
src/: steam_stats.cpp  steam_stats.h
